Fix branch name trigger and add ignored paths

--- a/.github/workflows/stable_repo.yaml
+++ b/.github/workflows/stable_repo.yaml
@@ -4,7 +4,10 @@ name: Release Chart on S3 repo
 on:    
   push:
     branches:
-      - master
+      - main
+    paths-ignore:
+      - '**/README.md'
+      - '.github/**'
       
 jobs:
   build:
