--- a/sources/scc/docspace-components.yaml
+++ b/sources/scc/docspace-components.yaml
@@ -1,12 +1,11 @@
 kind: SecurityContextConstraints
-apiVersion: v1
+apiVersion: security.openshift.io/v1
 metadata:
   name: scc-docspace-components
 allowPrivilegedContainer: false
 runAsUser:
-  type: MustRunAsRange
-  uidRangeMax: 104 
-  uidRangeMin: 104
+  type: MustRunAs
+  uid: 104 
 seLinuxContext:
   type: MustRunAs
 fsGroup:
