--- a/sources/scc/helm-components.yaml
+++ b/sources/scc/helm-components.yaml
@@ -1,5 +1,5 @@
 kind: SecurityContextConstraints
-apiVersion: v1
+apiVersion: security.openshift.io/v1
 metadata:
   name: scc-helm-components
 allowPrivilegedContainer: false
@@ -18,3 +18,5 @@ supplementalGroups:
   type: MustRunAs
 users: []
 groups: []
+seccompProfiles:
+- runtime/default
