--- a/templates/services/files.yaml
+++ b/templates/services/files.yaml
@@ -3,10 +3,11 @@ kind: Service
 metadata:
   name: files
   namespace: {{ include "docspace.namespace" . | quote }}
-  {{- if .Values.commonLabels }}
   labels:
+    app: files
+    {{- if .Values.commonLabels }}
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
-  {{- end }}
+    {{- end }}
 spec:
   ports:
   - port: {{ .Values.files.containerPorts.app }}
