--- a/templates/statefulset/api-system.yaml
+++ b/templates/statefulset/api-system.yaml
@@ -10,7 +10,7 @@ metadata:
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.apiSystem.replicaCount }}
   selector:
     matchLabels:
       app: api-system
