--- a/templates/services/api.yaml
+++ b/templates/services/api.yaml
@@ -14,5 +14,8 @@ spec:
     name: app
     targetPort: {{ .Values.api.containerPorts.app }}
   selector:
-    statefulset.kubernetes.io/pod-name: api-0
+    app: api
+    {{- if .Values.commonLabels }}
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
+    {{- end }}
   type: ClusterIP
