--- a/templates/services/backup-background-tasks.yaml
+++ b/templates/services/backup-background-tasks.yaml
@@ -14,5 +14,8 @@ spec:
     name: app
     targetPort: {{ .Values.backupBackgroundTasks.containerPorts.app }}
   selector:
-    statefulset.kubernetes.io/pod-name: backup-background-tasks-0
+    app: backup-background-tasks
+    {{- if .Values.commonLabels }}
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
+    {{- end }}
   type: ClusterIP
