--- a/templates/services/document-server.yaml
+++ b/templates/services/document-server.yaml
@@ -22,5 +22,8 @@ spec:
     targetPort: {{ .Values.docs.containerPorts.docservice }}
   selector:
     statefulset.kubernetes.io/pod-name: document-server-0
+    {{- if .Values.commonLabels }}
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
+    {{- end }}
   type: ClusterIP
 {{- end }}
