--- a/templates/services/files-services.yaml
+++ b/templates/services/files-services.yaml
@@ -14,5 +14,8 @@ spec:
     name: app
     targetPort: {{ .Values.filesServices.containerPorts.app }}
   selector:
-    statefulset.kubernetes.io/pod-name: files-services-0
+    app: files-services
+    {{- if .Values.commonLabels }}
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
+    {{- end }}
   type: ClusterIP
