--- a/templates/services/login.yaml
+++ b/templates/services/login.yaml
@@ -14,5 +14,8 @@ spec:
     name: login
     targetPort: {{ .Values.login.containerPorts.login }}
   selector:
-    statefulset.kubernetes.io/pod-name: login-0
+    app: login
+    {{- if .Values.commonLabels }}
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
+    {{- end }}
   type: ClusterIP
