--- a/templates/services/studio.yaml
+++ b/templates/services/studio.yaml
@@ -14,5 +14,8 @@ spec:
     name: app
     targetPort: {{ .Values.studio.containerPorts.app }}
   selector:
-    statefulset.kubernetes.io/pod-name: studio-0
+    app: studio
+    {{- if .Values.commonLabels }}
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
+    {{- end }}
   type: ClusterIP
