--- a/templates/statefulset/studio.yaml
+++ b/templates/statefulset/studio.yaml
@@ -9,7 +9,7 @@ metadata:
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.studio.replicaCount }}
   selector:
     matchLabels:
       app: studio
