--- a/templates/applications/files.yaml
+++ b/templates/applications/files.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: {{ .Values.files.kind }}
 metadata:
   name: files
   namespace: {{ include "docspace.namespace" . | quote }}
@@ -16,8 +16,16 @@ spec:
       {{- if .Values.commonLabels }}
       {{- include "docspace.labels.commonLabels" . | trim | nindent 6 }}
       {{- end }}
-  {{- if .Values.files.updateStrategy }}
+  {{- if eq .Values.files.kind "StatefulSet" }}
+  serviceName: files
+  {{- end }}
+  {{- if eq .Values.files.kind "Deployment" }}
   strategy: {{- toYaml .Values.files.updateStrategy | nindent 4 }}
+  {{- else }}
+  updateStrategy: {{- toYaml .Values.files.updateStrategy | nindent 4 }}
+  {{- end }}
+  {{- if eq .Values.files.kind "StatefulSet" }}
+  podManagementPolicy: {{ .Values.files.podManagementPolicy }}
   {{- end }}
   template:
     metadata:
