--- a/values.yaml
+++ b/values.yaml
@@ -819,6 +819,9 @@ router:
 healthchecks:
   # healthchecks.enabled Enables Healthchecks installation
   enabled: true
+  # healthchecks.kind The controller used for deploy
+  # Possible values are `Deployment` (default) or `StatefulSet`
+  kind: Deployment
   # healthchecks.replicaCount Number of Healthchecks replicas to deploy
   replicaCount: 1
   # Update strategy used to replace old Pods by new ones
@@ -832,6 +835,10 @@ healthchecks:
       maxUnavailable: 25%
       # healthchecks.updateStrategy.rollingUpdate.maxSurge Maximum number of Healthchecks Pods created over the desired number of Pods
       maxSurge: 25%
+  # healthchecks.podManagementPolicy The Healthchecks Pods scaling operations policy
+  # Used if `healthchecks.kind` is set to `StatefulSet`
+  # ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#pod-management-policies
+  podManagementPolicy: OrderedReady
   # Pod affinity rules for Healthchecks Pods scheduling by nodes relative to other Pods
   # Pod affinity allow you to constrain which nodes Healthchecks Pods can be scheduled on based on the labels of Pods already running on that node
   # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#inter-pod-affinity-and-anti-affinity
