--- a/templates/applications/people-server.yaml
+++ b/templates/applications/people-server.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: {{ .Values.peopleServer.kind }}
 metadata:
   name: people-server
   namespace: {{ include "docspace.namespace" . | quote }}
@@ -16,8 +16,18 @@ spec:
       {{- if .Values.commonLabels }}
       {{- include "docspace.labels.commonLabels" . | trim | nindent 6 }}
       {{- end }}
+  {{- if eq .Values.peopleServer.kind "StatefulSet" }}
+  serviceName: people-server
+  {{- end }}
   {{- if .Values.peopleServer.updateStrategy }}
+  {{- if eq .Values.peopleServer.kind "Deployment" }}
   strategy: {{- toYaml .Values.peopleServer.updateStrategy | nindent 4 }}
+  {{- else }}
+  updateStrategy: {{- toYaml .Values.peopleServer.updateStrategy | nindent 4 }}
+  {{- end }}
+  {{- end }}
+  {{- if eq .Values.peopleServer.kind "StatefulSet" }}
+  podManagementPolicy: {{ .Values.peopleServer.podManagementPolicy }}
   {{- end }}
   template:
     metadata:
